# ArchipelaPal

./: .gitignore  .gitmodules  EXAMPLE.yaml  LICENSE  README.md  TestUser.yaml  make_apworld.sh
.github/workflows/: pr-checks.yml  release.yml
crates/ap-bot-main/: Cargo.toml
crates/ap-bot-main/src/: defs.rs  main.rs
crates/ap-bot-main/src/defs/: lib.rs  mod.rs  player.rs  save_file.rs
crates/ap-bot-main/src/processes/: game_playing_thread.rs  game_state_handler.rs  message_handler.rs  mod.rs
crates/ap-performance-reader/: .env.example  Cargo.toml  README.md
crates/ap-performance-reader/src/: main.rs
crates/archipelapal-main/: Cargo.toml
crates/archipelapal-main/src/: main.rs  utils.rs
crates/archipelapal-main/src/defs/: chest.rs  game_state.rs  items.rs  lib.rs  mod.rs  offsets.rs  player.rs  user_settings.rs
crates/archipelapal-main/src/processes/: game_playing_thread.rs  message_handler.rs  mod.rs
q-local/: make-and-gen.sh  run-server.sh
scripts/: make-and-gen.sh  run-server.sh
world/: Test.py  make_apworld.sh
world/apbot/: Errors.py  Items.py  Locations.py  Options.py  __init__.py
world/archipelapal/: Items.py  __init__.py
