[package]
name = "archipelapal"
version = "0.1.0"
edition = "2021"

[dependencies]
ap_rs = { path = "../archipelago_rs", package = "archipelago_rs" }

anyhow = "1.0.86"
clap = { version = "4.5.15", features = ["env", "derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["full"] }
